[package]
name = "secure-string"
version = "0.3.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
keywords = ["Security", "Memory"]
description = "A data type suitable for storing sensitive information such as passwords and private keys in memory, featuring constant time equality, mlock and zeroing out."
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/ISibboI/secure-string"
documentation = "https://docs.rs/secure-string/"
edition = "2021"

[dependencies]
libc = "0.2"
zeroize = { version = "1", features = ["std"] }
serde = { version = "1", optional = true }
subtle = "2"

[dev-dependencies]
serde_cbor = "0.11"
serde_json = "1"
